--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Al-Taj</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <ul>
+    <ul class="hmph">
         <li><a href="./recipes/shawarma.html">Shawarma</a></li>
         <li><a href="./recipes/darkchocolate.html">Dark Chocolate</a></li>
         <li><a href="./recipes/buffalosauce.html">Buffalo Sauce</a></li>
